--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -1,3 +1,5 @@
+@import '_utils';
+
 body{
     background-color: var(--grey-dark);
     font-family: var(--font-family-outfit);
@@ -245,7 +247,7 @@ h3,h4{
          margin-bottom: 1rem;;
     }
 
-    &--decision, &--restart{
+    &--decision{
         width: 60%;
         display: flex;
         flex-direction: row;
@@ -258,8 +260,22 @@ h3,h4{
         }
     }
     &--restart{
+        width: 60%;
         display: none;
-    }   
+        flex-direction: column;
+        gap: 2rem;
+
+        button{
+            width: 100%;
+            height: auto;
+            padding: 1rem;
+        }
+        
+        @include breakpoint('medium') {
+            flex-direction: row;
+        }   
+        
+    }
 }   
 
 
