--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -17,8 +17,6 @@ body{
     min-width: 300px;
     max-width: 600px;
     padding: 1rem;
-    // //max-width: 600px;
-    // height: 60%;
 }
 
 h3,h4{
@@ -195,11 +193,13 @@ h3,h4{
     display: flex;
     justify-content: center;
     align-items: center;
-
-
     background-color: var(--grey-light);
     box-shadow: 0 10px 0 0 var(--grey-shadow);
     border-radius: 10px;
+
+    img{
+        @include responsive-size(34px, 64px);
+    }
 }
 
 .result{
@@ -209,6 +209,7 @@ h3,h4{
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    text-align: center;
     color: var(--grey-dark);
     border-radius: 10px;
     padding: .8rem;
@@ -250,7 +251,7 @@ h3,h4{
     &--decision{
         width: 60%;
         display: flex;
-        flex-direction: row;
+        flex-direction: column;
         gap: 2rem;
 
         button{
@@ -258,6 +259,10 @@ h3,h4{
             height: auto;
             padding: 1rem;
         }
+
+        @include breakpoint('medium') {
+            flex-direction: row;
+        }  
     }
     &--restart{
         width: 60%;
