--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -150,13 +150,18 @@ h3,h4{
             justify-content: center;
             width: 100%;
             height: 100%;
+            gap: .5rem;
+            background-color: var(--grey-light);
+            box-shadow: 0 5px 0 0 var(--grey-shadow);
+            border-radius: 10px;
+            padding: .5rem;
+
 
              &--image{
                img{
-                    width: 80%;
-                    height: 80%;
-                    min-width: 25px;
-                    min-height: 25px;
+                    filter: brightness(0) saturate(100%) invert(79%) sepia(8%) saturate(1029%) hue-rotate(157deg) brightness(91%) contrast(86%);
+                    width: clamp(24px, 8vw, 58px);
+                    height: clamp(24px, 8vw, 58px);
                 }
             }
             h4{
@@ -177,8 +182,7 @@ h3,h4{
         width: 100%;
         height: auto;
         aspect-ratio: 1;
-        gap: 1rem;
-        gap: clamp(8px, calc(-4px + 4vw), 16px);
+        gap: clamp(16px, calc(-4px + 4vw), 28px);
     }
 
     &--results{
@@ -200,6 +204,15 @@ h3,h4{
     img{
         @include responsive-size(34px, 64px);
     }
+}
+
+.winXPannel{
+    background-color: var(--blue-dark);
+    box-shadow: 0 10px 0 0 var(--blue-shadow);
+}
+.winOPannel{
+    background-color: var(--orange-dark);
+    box-shadow: 0 10px 0 0 var(--orange-shadow);
 }
 
 .result{
