--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -1,5 +1,6 @@
 @import '_utils';
 
+// Layout
 body{
     background-color: var(--grey-dark);
     font-family: var(--font-family-outfit);
@@ -23,6 +24,7 @@ h3,h4{
     padding: 1rem;
 }
 
+// Menu
 .menu{
     width: 100%;
     height: 100%;
@@ -44,8 +46,7 @@ h3,h4{
             padding: .5rem;
 
             img{
-                width: 40px;
-                height: 40px;
+                @include responsive-size(34px, 64px);
             }
         }
     }
@@ -90,8 +91,7 @@ h3,h4{
                 padding: .5rem;
 
                 img{
-                    width: 40px;
-                    height: 40px;
+                    @include responsive-size(34px, 64px);
                 }
             }
             &--x{
@@ -117,6 +117,7 @@ h3,h4{
     width: auto;
 }
 
+// Board
 .board{
     width: 100%;
     height: 100%;
@@ -197,12 +198,22 @@ h3,h4{
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: var(--grey-light);
+    background-color: hsla(199, 35%, 19%, 0.8); // Semi-transparent grey-light
     box-shadow: 0 10px 0 0 var(--grey-shadow);
     border-radius: 10px;
 
     img{
         @include responsive-size(34px, 64px);
+        transition: transform 0.2s ease;
+    }
+
+    &:hover{
+        cursor: pointer;
+        transform: scale(1.05);
+    }
+
+    img:hover{
+        transform: scale(1.1);
     }
 }
 
@@ -232,10 +243,12 @@ h3,h4{
     }
 
     &--score{
-
+        font-size: 2rem;
+        font-weight: bold;
     }
 }
 
+// Banner
 .banner{
     position: absolute;
     display: none;
@@ -258,7 +271,7 @@ h3,h4{
          align-items: center;
          justify-content: center;
          gap: 1rem;
-         margin-bottom: 1rem;;
+         margin-bottom: 1rem;
     }
 
     &--decision{
@@ -297,6 +310,7 @@ h3,h4{
 }   
 
 
+// Overlay and Data Attributes
 .overlay{
     width: 100vw;
     height: 100vh;
